--- a/index.html
+++ b/index.html
@@ -2,106 +2,100 @@
 <html>
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>跬步计划 每周版 | Small Steps Plan Weekly</title>
-    <link rel="icon" href="favicon.jpg">
-    <link rel="apple-touch-icon-precomposed" href="favicon.jpg">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/master.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>跬步计划 每周版 | Small Steps Plan Weekly</title>
+  <link rel="icon" href="favicon.jpg">
+  <link rel="apple-touch-icon-precomposed" href="favicon.jpg">
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/master.css">
 </head>
 
 <body>
-    <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
-        <h5 class="my-0 mr-md-auto font-weight-normal">跬步计划</h5>
-    </div>
+  <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
+    <h5 class="my-0 mr-md-auto">跬步计划</h5>
+  </div>
 
-    <div class="book-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-        <h1 class="display-4">每周版</h1>
-        <p class="lead">使一种交往具有价值的不是交往本身，而是交往者各自的价值。<small>—— 周国平</small></p>
-    </div>
+  <div class="book-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
+    <h1 class="display-4">每周版</h1>
+    <p class="lead">使一种交往具有价值的不是交往本身，而是交往者各自的价值。<small>—— 周国平</small></p>
+  </div>
 
-    <div class="container">
-        <div class="card-deck mb-3 text-center">
-            <!-- SSPW001 -->
-            <div class="card mb-4 shadow-sm">
-                <div class="card-header">
-                    <h5 class="my-0 font-weight-normal">SSPW001</h5>
-                </div>
-                <div class="card-body">
-                    <a href="https://www.amazon.co.jp/マップ式-中国語単語記憶術-林-松涛/dp/4062183099">
-                        <img src="images/SSPW001/cover.jpg" alt="マップ式 中国語単語記憶術">
-                    </a>
-                    <a href="html/SSPW001/index.html" class="btn btn-lg btn-block btn-primary">温故知新</a>
-                </div>
-            </div>
-            <!-- SSPW002 -->
-            <div class="card mb-4 shadow-sm">
-                <div class="card-header">
-                    <h5 class="my-0 font-weight-normal">SSPW002</h5>
-                </div>
-                <div class="card-body">
-                    <a href="https://www.amazon.co.jp/心の扉をたたく291の質問-BOOK-QUESTIONS-グレゴリー-ストック/dp/478890814X">
-                        <img src="images/SSPW002/cover.jpg" alt="心の扉をたたく291の質問 THE BOOK OF QUESTIONS">
-                    </a>
-                    <a href=" html/SSPW002/index.html" class="btn btn-lg btn-block btn-primary">温故知新</a>
-                </div>
-            </div>
-            <!-- SSPW003 -->
-            <div class="card mb-4 shadow-sm">
-                <div class="card-header">
-                    <h5 class="my-0 font-weight-normal">SSPW003</h5>
-                </div>
-                <div class="card-body">
-                    <a href="https://www.amazon.co.jp/易経-陽の巻―夢をもつってどういうこと-こどもと読む東洋哲学-竹村-亞希子/dp/4787717065">
-                        <img src="images/SSPW003/cover.jpg" alt="易経 陽の巻―夢をもつってどういうこと? (こどもと読む東洋哲学)">
-                    </a>
-                    <a href="html/SSPW003/index.html" class="btn btn-lg btn-block btn-primary">温故知新</a>
-                </div>
-            </div>
-            <!-- SSPW004 -->
-            <div class="card mb-4 shadow-sm">
-                <div class="card-header">
-                    <h5 class="my-0 font-weight-normal">SSPW004</h5>
-                </div>
-                <div class="card-body">
-                    <a href="https://www.amazon.co.jp/易経-陰の巻―結果が出ないときはどうしたらいい-こどもと読む東洋哲学-竹村-亞希子/dp/4787717138">
-                        <img class="opacity" src="images/SSPW004/cover.jpg" alt="易経 陰の巻―結果が出ないときはどうしたらいい? (こどもと読む東洋哲学)">
-                    </a>
-                    <a href="html/SSPW004/index.html" class="btn btn-lg btn-block btn-primary disabled">温故知新</a>
-                </div>
-            </div>
-            <!-- SSPW005 -->
-            <div class="card mb-4 shadow-sm">
-                <div class="card-header">
-                    <h5 class="my-0 font-weight-normal">SSPW005</h5>
-                </div>
-                <div class="card-body">
-                    <a href="https://www.amazon.co.jp/易経-青龍の巻―自分の足で歩いていくってどういうこと-こどもと読む東洋哲学-竹村-亞希子/dp/4787719246">
-                        <img class="opacity" src="images/SSPW005/cover.jpg" alt="易経 青龍の巻―自分の足で歩いていくってどういうこと? (こどもと読む東洋哲学)">
-                    </a>
-                    <a href="html/SSPW005/index.html" class="btn btn-lg btn-block btn-primary disabled">温故知新</a>
-                </div>
-            </div>
-            <!-- SSPW006 -->
-            <div class="card mb-4 shadow-sm">
-                <div class="card-header">
-                    <h5 class="my-0 font-weight-normal">SSPW006</h5>
-                </div>
-                <div class="card-body">
-                    <a href="https://www.amazon.co.jp/嫌われる勇気―――自己啓発の源流「アドラー」の教え-岸見-一郎/dp/4478025819">
-                        <img src="images/SSPW006/cover.jpg" alt="嫌われる勇気―――自己啓発の源流「アドラー」の教え">
-                    </a>
-                    <a href="html/SSPW006/index.html" class="btn btn-lg btn-block btn-primary">温故知新</a>
-                </div>
-            </div>
+  <div class="container">
+    <div class="card-deck mb-3 text-center">
+      <!-- SSPW001 -->
+      <div class="card mb-4 shadow-sm">
+        <div class="card-header">
+          <h6 class="my-0">SSPW001</h6>
         </div>
+        <div class="card-body">
+          <a href="html/SSPW001/index.html">
+            <img src="images/SSPW001/cover.jpg" alt="マップ式 中国語単語記憶術">
+          </a>
+        </div>
+      </div>
+      <!-- SSPW002 -->
+      <div class="card mb-4 shadow-sm">
+        <div class="card-header">
+          <h6 class="my-0">SSPW002</h6>
+        </div>
+        <div class="card-body">
+          <a href="html/SSPW002/index.html">
+            <img src="images/SSPW002/cover.jpg" alt="心の扉をたたく291の質問">
+          </a>
+        </div>
+      </div>
+      <!-- SSPW003 -->
+      <div class="card mb-4 shadow-sm">
+        <div class="card-header">
+          <h6 class="my-0">SSPW003</h6>
+        </div>
+        <div class="card-body">
+          <a href="html/SSPW003/index.html">
+            <img src="images/SSPW003/cover.jpg" alt="嫌われる勇気">
+          </a>
+        </div>
+      </div>
+      <!-- SSPW004 -->
+      <div class="card mb-4 shadow-sm">
+        <div class="card-header">
+          <h6 class="my-0">SSPW004</h6>
+        </div>
+        <div class="card-body">
+          <a href="html/SSPW004/index.html">
+            <img src="images/SSPW004/cover.jpg" alt="易経 陽の巻">
+          </a>
+        </div>
+      </div>
+      <!-- SSPW005 -->
+      <div class="card mb-4 shadow-sm">
+        <div class="card-header">
+          <h6 class="my-0">SSPW005</h6>
+        </div>
+        <div class="card-body">
+          <a href="html/SSPW005/index.html">
+            <img src="images/SSPW005/cover.jpg" alt="易経 陰の巻">
+          </a>
+        </div>
+      </div>
+      <!-- SSPW006 -->
+      <div class="card mb-4 shadow-sm">
+        <div class="card-header">
+          <h6 class="my-0">SSPW006</h6>
+        </div>
+        <div class="card-body">
+          <a href="html/SSPW006/index.html">
+            <img src="images/SSPW006/cover.jpg" alt="易経 青龍の巻">
+          </a>
+        </div>
+      </div>
     </div>
+  </div>
 
-    <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/master.js"></script>
+  <script src="js/jquery.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/master.js"></script>
 </body>
 
 </html>
